--- a/assets/css/style_ParticleJs.css
+++ b/assets/css/style_ParticleJs.css
@@ -13,20 +13,6 @@ hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padd
 input,select{vertical-align:middle}
 li{list-style:none}
 
-html,body{ 
-	width:100%;
-	height:100%;
-	background:#212529;
-}
-
-html{
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-body{
-  font:normal 75% Arial, Helvetica, sans-serif;
-}
-
 canvas{
   display:block;
   vertical-align:bottom;
@@ -36,6 +22,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
+  font:normal 75% Arial, Helvetica, sans-serif;
   background-color: #212529;
   background-image: url('');
   background-size: cover;
